Bug 38076 - [Qt] GraphicsLayer: flicker when starting an animation before the previous one ended.
Summary: [Qt] GraphicsLayer: flicker when starting an animation before the previous on...
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Normal
Assignee: Nobody
URL:
Keywords: Qt
Depends on:
Blocks: 38071
  Show dependency treegraph
 
Reported: 2010-04-23 18:53 PDT by Noam Rosenthal
Modified: 2010-04-30 00:04 PDT (History)
2 users (show)

See Also:


Attachments
Fix flicker in end of animation (4.86 KB, patch)
2010-04-24 09:28 PDT, Noam Rosenthal
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Noam Rosenthal 2010-04-23 18:53:34 PDT
See bug 38071 for test case - click on the animated item frequently.
Comment 1 Noam Rosenthal 2010-04-24 09:28:28 PDT
Created attachment 54219 [details]
Fix flicker in end of animation
Comment 2 WebKit Commit Bot 2010-04-29 00:15:24 PDT
Comment on attachment 54219 [details]
Fix flicker in end of animation

Clearing flags on attachment: 54219

Committed r58480: <http://trac.webkit.org/changeset/58480>
Comment 3 WebKit Commit Bot 2010-04-29 00:15:30 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 Simon Hausmann 2010-04-30 00:04:46 PDT
Revision r58480 cherry-picked into qtwebkit-2.0 with commit 540ae4ccd25609e1bfe1673195ce126255e36774