WebCore/platform/graphics/qt/GraphicsLayerQt.cpp
@@ -1168,8 +1168,6 @@ public:
     {
         if (m_fillsForwards)
             setCurrentTime(1);
-        else if (m_layer && m_layer.data()->m_layer)
-            m_layer.data()->setBaseTransform(m_layer.data()->m_layer->transform());
     }
 
     // the idea is that we let WebCore manage the transform-operations
@@ -1207,6 +1205,7 @@ public:
                 transformMatrix.blend(m_sourceMatrix, progress);
             }
         }
+
         m_layer.data()->setBaseTransform(transformMatrix);
         if (m_fillsForwards)
             m_layer.data()->m_layer->setTransform(m_layer.data()->m_baseTransform);
@@ -1225,7 +1224,10 @@ public:
             m_sourceMatrix = m_layer.data()->m_layer->transform();
             m_layer.data()->m_transformAnimationRunning = true;
         } else if (newState == QAbstractAnimation::Stopped) {
+            // We update the transform back to the default. This already takes fill-modes into account.
             m_layer.data()->m_transformAnimationRunning = false;
+            if (m_layer && m_layer.data()->m_layer)
+                m_layer.data()->setBaseTransform(m_layer.data()->m_layer->transform());
         }
     }
 
@@ -1243,8 +1245,6 @@ public:
     {
         if (m_fillsForwards)
             setCurrentTime(1);
-        else if (m_layer && m_layer.data()->m_layer)
-            m_layer.data()->setOpacity(m_layer.data()->m_layer->opacity());
     }
     virtual void applyFrame(const qreal& fromValue, const qreal& toValue, qreal progress)
     {
@@ -1266,6 +1266,12 @@ public:
 
         if (m_layer)
             m_layer.data()->m_opacityAnimationRunning = (newState == QAbstractAnimation::Running);
+
+        // If stopped, we update the opacity back to the default. This already takes fill-modes into account.
+        if (newState == Stopped)
+            if (m_layer && m_layer.data()->m_layer)
+                m_layer.data()->setOpacity(m_layer.data()->m_layer->opacity());
+
     }
 };
 
@@ -1331,6 +1337,8 @@ void GraphicsLayerQt::removeAnimationsForProperty(AnimatedPropertyID id)
         if (*it) {
             AnimationQtBase* anim = static_cast<AnimationQtBase*>(it->data());
             if (anim && anim->m_webkitPropertyID == id) {
+                // We need to stop the animation right away, or it might flicker before it's deleted.
+                anim->stop();
                 anim->deleteLater();
                 it = m_impl->m_animations.erase(it);
                 --it;
@@ -1345,7 +1353,9 @@ void GraphicsLayerQt::removeAnimationsForKeyframes(const String& name)
         if (*it) {
             AnimationQtBase* anim = static_cast<AnimationQtBase*>((*it).data());
             if (anim && anim->m_keyframesName == QString(name)) {
-                (*it).data()->deleteLater();
+                // We need to stop the animation right away, or it might flicker before it's deleted.
+                anim->stop();
+                anim->deleteLater();
                 it = m_impl->m_animations.erase(it);
                 --it;
             }
